data/derived/comb/progs/unify/prog6134.ml.out
Characters 23-25:
  let _, _ = (List.mem 1 s0, List.mem 2 s0);;
                         ^^
Error: This expression has type int set
       but an expression was expected of type int list
